# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../multimodalinput_mini.gni")

action("pack_joystick_layouts") {
  script = "${mmi_path}/etc/pack_resources.py"
  sources = [
    "layout/Vendor_0079_Product_0011.json",
    "layout/Vendor_0079_Product_18d4.json",
    "layout/Vendor_0171_Product_0419.json",
    "layout/Vendor_0428_Product_4001.json",
    "layout/Vendor_044f_Product_b326.json",
    "layout/Vendor_045e_Product_028e.json",
    "layout/Vendor_045e_Product_028f.json",
    "layout/Vendor_045e_Product_02a1.json",
    "layout/Vendor_045e_Product_02d1.json",
    "layout/Vendor_045e_Product_02dd.json",
    "layout/Vendor_045e_Product_02e0.json",
    "layout/Vendor_045e_Product_02e3.json",
    "layout/Vendor_045e_Product_02ea.json",
    "layout/Vendor_045e_Product_02fd.json",
    "layout/Vendor_045e_Product_0b12.json",
    "layout/Vendor_046d_Product_b501.json",
    "layout/Vendor_046d_Product_c216.json",
    "layout/Vendor_046d_Product_c219.json",
    "layout/Vendor_046d_Product_c21d.json",
    "layout/Vendor_046d_Product_c21e.json",
    "layout/Vendor_046d_Product_c21f.json",
    "layout/Vendor_046d_Product_c242.json",
    "layout/Vendor_046d_Product_c294.json",
    "layout/Vendor_046d_Product_c299.json",
    "layout/Vendor_046d_Product_c532.json",
    "layout/Vendor_054c_Product_0268.json",
    "layout/Vendor_054c_Product_0268_Version_8000.json",
    "layout/Vendor_054c_Product_0268_Version_8100.json",
    "layout/Vendor_054c_Product_0268_Version_8111.json",
    "layout/Vendor_054c_Product_05c4.json",
    "layout/Vendor_054c_Product_05c4_Version_8000.json",
    "layout/Vendor_054c_Product_05c4_Version_8100.json",
    "layout/Vendor_054c_Product_05c4_Version_8111.json",
    "layout/Vendor_054c_Product_09cc.json",
    "layout/Vendor_054c_Product_09cc_Version_8000.json",
    "layout/Vendor_054c_Product_09cc_Version_8100.json",
    "layout/Vendor_054c_Product_09cc_Version_8111.json",
    "layout/Vendor_054c_Product_0ba0.json",
    "layout/Vendor_054c_Product_0ba0_Version_8111.json",
    "layout/Vendor_054c_Product_0ce6_fallback.json",
    "layout/Vendor_054c_Product_0ce6.json",
    "layout/Vendor_054c_Product_0df2_fallback.json",
    "layout/Vendor_054c_Product_0df2.json",
    "layout/Vendor_056e_Product_2004.json",
    "layout/Vendor_056e_Product_2010.json",
    "layout/Vendor_056e_Product_2013.json",
    "layout/Vendor_057e_Product_2009.json",
    "layout/Vendor_0583_Product_2060.json",
    "layout/Vendor_05ac_Product_0239.json",
    "layout/Vendor_06a3_Product_f51a.json",
    "layout/Vendor_0738_Product_4716.json",
    "layout/Vendor_0738_Product_4718.json",
    "layout/Vendor_0738_Product_4726.json",
    "layout/Vendor_0738_Product_4736.json",
    "layout/Vendor_0738_Product_4740.json",
    "layout/Vendor_0738_Product_9871.json",
    "layout/Vendor_0738_Product_b726.json",
    "layout/Vendor_0738_Product_beef.json",
    "layout/Vendor_0738_Product_cb02.json",
    "layout/Vendor_0738_Product_cb03.json",
    "layout/Vendor_0738_Product_cb29.json",
    "layout/Vendor_0738_Product_f738.json",
    "layout/Vendor_07ff_Product_ffff.json",
    "layout/Vendor_0957_Product_0001.json",
    "layout/Vendor_0957_Product_0031.json",
    "layout/Vendor_0b05_Product_4500.json",
    "layout/Vendor_0e6f_Product_0113.json",
    "layout/Vendor_0e6f_Product_011f.json",
    "layout/Vendor_0e6f_Product_0131.json",
    "layout/Vendor_0e6f_Product_0133.json",
    "layout/Vendor_0e6f_Product_0139.json",
    "layout/Vendor_0e6f_Product_013a.json",
    "layout/Vendor_0e6f_Product_0146.json",
    "layout/Vendor_0e6f_Product_0147.json",
    "layout/Vendor_0e6f_Product_0161.json",
    "layout/Vendor_0e6f_Product_0162.json",
    "layout/Vendor_0e6f_Product_0163.json",
    "layout/Vendor_0e6f_Product_0164.json",
    "layout/Vendor_0e6f_Product_0165.json",
    "layout/Vendor_0e6f_Product_0201.json",
    "layout/Vendor_0e6f_Product_0213.json",
    "layout/Vendor_0e6f_Product_021f.json",
    "layout/Vendor_0e6f_Product_0246.json",
    "layout/Vendor_0e6f_Product_02a4.json",
    "layout/Vendor_0e6f_Product_02a6.json",
    "layout/Vendor_0e6f_Product_02ab.json",
    "layout/Vendor_0e6f_Product_0301.json",
    "layout/Vendor_0e6f_Product_0346.json",
    "layout/Vendor_0e6f_Product_0401.json",
    "layout/Vendor_0e6f_Product_0413.json",
    "layout/Vendor_0e6f_Product_0501.json",
    "layout/Vendor_0e6f_Product_f501.json",
    "layout/Vendor_0e6f_Product_f900.json",
    "layout/Vendor_0f0d_Product_000a.json",
    "layout/Vendor_0f0d_Product_000c.json",
    "layout/Vendor_0f0d_Product_0067.json",
    "layout/Vendor_0f0d_Product_00c1.json",
    "layout/Vendor_1038_Product_1412.json",
    "layout/Vendor_1038_Product_1430.json",
    "layout/Vendor_1038_Product_1431.json",
    "layout/Vendor_1038_Product_1434.json",
    "layout/Vendor_11c9_Product_55f0.json",
    "layout/Vendor_12ab_Product_0301.json",
    "layout/Vendor_12bd_Product_d015.json",
    "layout/Vendor_1430_Product_4748.json",
    "layout/Vendor_1430_Product_f801.json",
    "layout/Vendor_146b_Product_0601.json",
    "layout/Vendor_1532_Product_0037.json",
    "layout/Vendor_1532_Product_0705.json",
    "layout/Vendor_1532_Product_0707.json",
    "layout/Vendor_1532_Product_0709.json",
    "layout/Vendor_1532_Product_0900.json",
    "layout/Vendor_1532_Product_0a03.json",
    "layout/Vendor_1532_Product_1004.json",
    "layout/Vendor_1532_Product_1007.json",
    "layout/Vendor_1532_Product_1009.json",
    "layout/Vendor_1532_Product_100a.json",
    "layout/Vendor_15e4_Product_3f00.json",
    "layout/Vendor_15e4_Product_3f0a.json",
    "layout/Vendor_15e4_Product_3f10.json",
    "layout/Vendor_162e_Product_beef.json",
    "layout/Vendor_1689_Product_fd00.json",
    "layout/Vendor_1689_Product_fd01.json",
    "layout/Vendor_1689_Product_fe00.json",
    "layout/Vendor_18d1_Product_0200.json",
    "layout/Vendor_18d1_Product_2c40.json",
    "layout/Vendor_18d1_Product_4f80.json",
    "layout/Vendor_18d1_Product_5018.json",
    "layout/Vendor_18d1_Product_9451.json",
    "layout/Vendor_1949_Product_0401.json",
    "layout/Vendor_1bad_Product_0002.json",
    "layout/Vendor_1bad_Product_f016.json",
    "layout/Vendor_1bad_Product_f021.json",
    "layout/Vendor_1bad_Product_f023.json",
    "layout/Vendor_1bad_Product_f025.json",
    "layout/Vendor_1bad_Product_f027.json",
    "layout/Vendor_1bad_Product_f028.json",
    "layout/Vendor_1bad_Product_f036.json",
    "layout/Vendor_1bad_Product_f038.json",
    "layout/Vendor_1bad_Product_f501.json",
    "layout/Vendor_1bad_Product_f506.json",
    "layout/Vendor_1bad_Product_f900.json",
    "layout/Vendor_1bad_Product_f901.json",
    "layout/Vendor_1bad_Product_f903.json",
    "layout/Vendor_1bad_Product_f904.json",
    "layout/Vendor_1bad_Product_fa01.json",
    "layout/Vendor_1bad_Product_fd00.json",
    "layout/Vendor_1bad_Product_fd01.json",
    "layout/Vendor_1d79_Product_0009.json",
    "layout/Vendor_20bc_Product_5126.json",
    "layout/Vendor_22b8_Product_093d.json",
    "layout/Vendor_2378_Product_1008.json",
    "layout/Vendor_2378_Product_100a.json",
    "layout/Vendor_24c6_Product_5300.json",
    "layout/Vendor_24c6_Product_5303.json",
    "layout/Vendor_24c6_Product_530a.json",
    "layout/Vendor_24c6_Product_531a.json",
    "layout/Vendor_24c6_Product_5397.json",
    "layout/Vendor_24c6_Product_541a.json",
    "layout/Vendor_24c6_Product_542a.json",
    "layout/Vendor_24c6_Product_543a.json",
    "layout/Vendor_24c6_Product_5500.json",
    "layout/Vendor_24c6_Product_5501.json",
    "layout/Vendor_24c6_Product_5506.json",
    "layout/Vendor_24c6_Product_550d.json",
    "layout/Vendor_24c6_Product_551a.json",
    "layout/Vendor_24c6_Product_561a.json",
    "layout/Vendor_24c6_Product_5b02.json",
    "layout/Vendor_24c6_Product_5d04.json",
    "layout/Vendor_24c6_Product_fafe.json",
    "layout/Vendor_27f8_Product_0bbe.json",
    "layout/Vendor_27f8_Product_0bbf.json",
    "layout/Vendor_28de_Product_1102.json",
    "layout/Vendor_2dc8_Product_6101.json",
    "layout/Vendor_2e95_Product_7725.json",
  ]
  outputs = [ "$target_out_dir/joystick_layouts.dat" ]
  args = [
    rebase_path("layout"),
    rebase_path(outputs[0]),
  ]
}

ohos_prebuilt_etc("joystick_layouts_dat") {
  source = "$target_out_dir/joystick_layouts.dat"
  part_name = "${mmi_part_name}"
  subsystem_name = "${mmi_subsystem_name}"
  relative_install_dir = "multimodalinput"
  deps = [ ":pack_joystick_layouts" ]
}

group("input_joystick_etc") {
  if (input_feature_joystick) {
    deps = [
      ":joystick_layouts_dat",
    ]
  }
}
